<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game.TeamSelectActivity"
    android:orientation="vertical"
    android:weightSum="125">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/teams_count"/>
        <Button
            android:id="@+id/team_select_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_marginStart="10dp"
            android:layout_weight="15"
            android:background="@drawable/button_style"
            android:textColor="@color/main_text_color"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <EditText
            android:id="@+id/team_select_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/min_count"
            android:background="@drawable/button_style"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"/>
        <Button
            android:id="@+id/team_select_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_marginStart="10dp"
            android:layout_weight="15"
            android:background="@drawable/button_style"
            android:textColor="@color/main_text_color"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:visibility="visible"
        android:background="@color/blue"
        android:text="@string/blue"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="5dp"
        android:id="@+id/select_team_blue_team"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:visibility="visible"
        android:background="@color/red"
        android:text="@string/red"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="5dp"
        android:id="@+id/select_team_red_team"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:visibility="invisible"
        android:background="@color/green"
        android:text="@string/green"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="5dp"
        android:id="@+id/select_team_green_team"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:visibility="invisible"
        android:background="@color/yellow"
        android:text="@string/yellow"
        android:gravity="center"
        android:textColor="@color/main_text_color"
        android:textSize="40sp"
        android:layout_marginTop="5dp"
        android:id="@+id/select_team_yellow_team"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="10"
        android:text="@string/play_game"
        android:background="@drawable/button_style"
        android:textColor="@color/main_text_color"
        android:id="@+id/select_team_play_button"/>

</LinearLayout>