<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game.GameActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/currentTeam"
        android:background="@color/red"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/game_current_team"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/nextTeam"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/game_next_team"/>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_invisible"
        android:id="@+id/game_taskvisibility_button"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:weightSum="100"
        android:id="@+id/board_layout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="@drawable/boarder_background"
            android:textColor="@color/main_text_color"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/game_task_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="@drawable/boarder_background"
            android:textColor="@color/main_text_color"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/game_word_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="@drawable/boarder_background"
            android:textColor="@color/main_text_color"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/game_score_view"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/default_countdown"
        android:id="@+id/game_chromometer"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/game_answer_layout">
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_false"
            android:layout_gravity="start"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:id="@+id/answer_false_button"/>
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_true"
            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/answer_true_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/game_start_timer"
            android:text="@string/start"
            android:background="@drawable/button_style"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_toEndOf="@id/answer_false_button"
            android:layout_toStartOf="@id/answer_true_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </RelativeLayout>

</LinearLayout>